--- a/Lab_1.1.css
+++ b/Lab_1.1.css
@@ -3,9 +3,9 @@
 	font-weight: bold;
 }
 
-image {
-	width: 170px;
-	height: 170px;
-	margin-right: 10px;
-	display: inline-block;
+img {
+    width: 100px;
+    height: 100px;
+    margin: 10px;
+    float: left;
 }
